--- a/src/App.css
+++ b/src/App.css
@@ -18,6 +18,13 @@ h1, h2, h3, h4, h5, h6 {
   color: var(--pokemon-yellow);
 }
 
+h1, h2, h4 {
+  font-family: 'Quicksand', sans-serif;
+}
+h3, h5, h6 {
+  font-family: 'Nunito', sans-serif;
+}
+
 h2 {
  font-size: 1.75rem;
 }
@@ -159,6 +166,7 @@ li::first-letter {
   color: black;
   display: flex;
   gap: 15px;
+  background: radial-gradient(circle, rgba(255, 255, 255, 0.35) 25%, rgba(255, 255, 255, 0) 100%);
 }
 
 .modal-text-container {
@@ -212,7 +220,6 @@ li::first-letter {
 
 .close-btn {
   position: absolute;
-  top: 10px;
   right: 20px;
   font-size: 2rem;
   cursor: pointer;
