--- a/src/App.css
+++ b/src/App.css
@@ -112,7 +112,7 @@ li::first-letter {
 
 .modal-border {
   position: relative;
-  padding: 27px 4px;
+  padding: 20px 4px;
   border-radius: 20px;
   background: linear-gradient(135deg, #f0f0f0, #a9a9a9, #ffffff, #707070, #f0f0f0);
   display: flex;
@@ -124,24 +124,56 @@ li::first-letter {
 
 .modal-content {
   position: relative;
-  padding: 0px;
-  background-color: #fff;
+  background-color: #ffffffd4;
   /* border-radius: 12px; */
-  box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.16);
+  box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.15);
   text-align: start;
-  width: 90%;
-  max-width: 385px;
+  width: 92%;
+  max-width: 420px;
   z-index: 1;
+}
+
+.modal-header-row {
+  display: flex;
+  padding: 0 10px;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.modal-header-row h2 {
+  font-size: 1.8rem;
+  text-align: center;
+  color: var(--pokemon-black);
+  text-transform: uppercase;
+  font-weight: bold;
+  text-shadow: 2px 2px darkgray;
+  padding-bottom: 0;
+}
+
+.modal-header-row h3 {
+  color: var(--pokemon-black);
+  font-size: 1.8rem;
+  padding-bottom: 0;
+  font-weight: bold;
+  text-shadow: 2px 2px darkgray;
+}
+
+.modal-header-row span.hp-display {
+  font-size: 0.7rem;
+  text-shadow: none;
 }
 
 .modal-image-container {
   position: relative;
-  width: 100%;
+  width: 90%;
+  margin: 0 auto;
   background: transparent;
+  border: 3px solid darkgray;
   display: flex;
   justify-content: center;
   align-items: center;
   padding: 0px 0px 5px 0px;
+  box-shadow: inset 0 4px 10px rgba(0, 0, 0, 0.3);
 }
 
 .modal-image {
@@ -153,7 +185,7 @@ li::first-letter {
 
 .modal-height-weight {
   position: absolute;
-  bottom: -4px;
+  bottom: 0px;
   left: 50%;
   width: 90%;
   align-items: center;
@@ -162,29 +194,23 @@ li::first-letter {
   padding: 5px 10px;
   border-radius: 8px;
   font-size: 0.9rem;
-  font-weight: bold;
   color: black;
   display: flex;
   gap: 15px;
   background: radial-gradient(circle, rgba(255, 255, 255, 0.35) 25%, rgba(255, 255, 255, 0) 100%);
 }
 
+.modal-height-weight p {
+  padding-bottom: 0;
+}
+
 .modal-text-container {
   width: 100%;
   padding: 10px;
-  background: rgba(255, 255, 255, 0.85);
+  /* background: rgba(255, 255, 255, 0.85); */
   /* border-radius: 0 0 12px 12px;f */
   box-sizing: border-box;
   min-height: 315px;
-}
-
-.modal-text-container h2 {
-  font-size: 1.8rem;
-  text-align: center;
-  color: var(--pokemon-black);
-  text-transform: uppercase;
-  font-weight: bold;
-  text-shadow: 2px 2px darkgray;
 }
 
 .modal-text-container h3 {
@@ -220,10 +246,11 @@ li::first-letter {
 
 .close-btn {
   position: absolute;
-  right: 20px;
+  right: 22px;
   font-size: 2rem;
   cursor: pointer;
   z-index: 2;
+  line-height: 2rem;
 }
 
 .close-btn:hover {
@@ -236,8 +263,11 @@ li::first-letter {
     flex: 1 1 calc(25% - 1rem);
     max-width: calc(25% - 1rem);
   }
+  .modal-header-row {
+    padding: 0px 18px;
+  }
   .modal-text-container {
-    padding: 20px 25px;
+    padding: 20px 18px;
   }
   .modal-content ul {
     font-size: 0.95rem;
