--- a/src/App.css
+++ b/src/App.css
@@ -9,6 +9,26 @@
   --pokemon-red: #E60012;
   --pokemon-blue: #1D72B8;
   --pokemon-black: #3C3C3B;
+
+
+  --normal-color: #a5a478;
+  --fire-color: #fb7c1b;
+  --water-color: #5086f9;
+  --electric-color: #fed639;
+  --grass-color: #71d338;
+  --ice-color: #99e6e2;
+  --fighting-color: #ae2626;
+  --poison-color: #b61bb3;
+  --ground-color: #daa556;
+  --flying-color: #ab92f0;
+  --psychic-color: #ef3c71;
+  --bug-color: #c2d81a;
+  --rock-color: #8e500e;
+  --ghost-color: #553085;
+  --dragon-color: #6F35FC;
+  --dark-color: #263c2f;
+  --steel-color: #939397;
+  --fairy-color: #d96aa2;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -61,7 +81,7 @@ li::first-letter {
 .pokemon-grid {
   display: flex;
   flex-wrap: wrap;
-  justify-content: center;
+  justify-content: space-evenly;
   gap: 1rem;
 }
 
@@ -70,30 +90,42 @@ li::first-letter {
   flex: 1 1 calc(100% - 1rem);
   max-width: calc(100% - 1rem);
   min-width: 200px;
-  border: 4px solid var(--pokemon-blue);
-  border-radius: 8px;
-  padding: 1rem;
+  /* border: 4px solid var(--pokemon-blue); */
+  border-radius: 100%;
+  padding: 0rem;
   box-shadow: 5px 5px 13px rgba(0, 0, 0, 0.5);
   text-align: center;
   background: var(--pokemon-black);
   cursor: pointer;
   transition: transform 0.2s ease-in-out;
+  position: relative;
+}
+
+.pokemon-card-header {
+  box-shadow: 5px 5px 13px rgba(0, 0, 0, 0.5);
+  position: absolute;
+  left: 50%;
+  top: 38%;
+  transform: translate(-50%, -50%);
+  width: 106%;
+  background-color: #f0f8ff7d;
+  text-align: center;
+  border-radius: 20px;
+}
+
+.pokemon-card-header h2 {
+  color: var(--pokemon-black);
+  padding: .5rem 0;
 }
 
 .pokemon-card:hover {
   transform: scale(1.05);
 }
 
-.pokemon-image {
-  width: 100px;
-  height: 100px;
-  object-fit: contain;
-  display: block;
-  margin: 0 auto 10px;
-
+.pokemon-card-image {
   width: 100%;
-  max-width: 150px;
   height: auto;
+  display: block;
 }
 
 
@@ -120,34 +152,57 @@ li::first-letter {
   align-items: center;
   width: 90%;
   max-width: 435px;
+  overflow: hidden;
 }
 
 .modal-content {
   position: relative;
-  background-color: #ffffffd4;
+  /* background-color: #ffffffd4; */
   /* border-radius: 12px; */
   box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.15);
   text-align: start;
   width: 92%;
   max-width: 420px;
   z-index: 1;
+  overflow: hidden;
 }
+
+.modal-content::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-image: radial-gradient(circle, rgba(255, 255, 255, 0.2) 20%, rgba(255, 255, 255, 0) 60%);
+  background-size: 5px 5px;
+  background-position: center;
+  z-index: 0;
+  pointer-events: none;
+}
+
+.modal-content > * {
+  position: relative;
+  z-index: 1;
+}
+
 
 .modal-header-row {
   display: flex;
-  padding: 0 10px;
+  padding: 0.5rem 15px;
   justify-content: space-between;
-  align-items: center;
+  align-items: flex-end;
 }
 
 .modal-header-row h2 {
-  font-size: 1.8rem;
+  font-size: 1.5rem;
   text-align: center;
   color: var(--pokemon-black);
   text-transform: uppercase;
   font-weight: bold;
   text-shadow: 2px 2px darkgray;
   padding-bottom: 0;
+  line-height: 1.6rem;
 }
 
 .modal-header-row h3 {
@@ -156,11 +211,14 @@ li::first-letter {
   padding-bottom: 0;
   font-weight: bold;
   text-shadow: 2px 2px darkgray;
+  line-height: 1.6rem;
+  flex-shrink: 0;
 }
 
 .modal-header-row span.hp-display {
   font-size: 0.7rem;
   text-shadow: none;
+  line-height: 0.7rem;
 }
 
 .modal-image-container {
@@ -168,7 +226,7 @@ li::first-letter {
   width: 90%;
   margin: 0 auto;
   background: transparent;
-  border: 3px solid darkgray;
+  border: 3px solid lightgray;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -197,7 +255,7 @@ li::first-letter {
   color: black;
   display: flex;
   gap: 15px;
-  background: radial-gradient(circle, rgba(255, 255, 255, 0.35) 25%, rgba(255, 255, 255, 0) 100%);
+  background: radial-gradient(circle, rgb(255 255 255 / 45%) 46%, rgba(255, 255, 255, 0) 100%);
 }
 
 .modal-height-weight p {
@@ -206,7 +264,7 @@ li::first-letter {
 
 .modal-text-container {
   width: 100%;
-  padding: 10px;
+  padding: 15px;
   /* background: rgba(255, 255, 255, 0.85); */
   /* border-radius: 0 0 12px 12px;f */
   box-sizing: border-box;
@@ -263,8 +321,14 @@ li::first-letter {
     flex: 1 1 calc(25% - 1rem);
     max-width: calc(25% - 1rem);
   }
+  .pokemon-grid {
+    gap: 3rem;
+  }
   .modal-header-row {
-    padding: 0px 18px;
+    padding: 0.5rem 18px;
+  }
+  .modal-header-row h2 {
+    font-size: 1.8rem;
   }
   .modal-text-container {
     padding: 20px 18px;
@@ -273,3 +337,5 @@ li::first-letter {
     font-size: 0.95rem;
   }
 }
+
+
