--- a/src/App.css
+++ b/src/App.css
@@ -145,7 +145,8 @@ li::first-letter {
   position: relative;
   padding: 20px 4px;
   border-radius: 20px;
-  background: linear-gradient(135deg, #f0f0f0, #a9a9a9, #ffffff, #707070, #f0f0f0);
+  background-color: #ffe261;
+  /* background: linear-gradient(135deg, #f0f0f0, #a9a9a9, #ffffff, #707070, #f0f0f0); */
   display: flex;
   justify-content: center;
   align-items: center;
@@ -158,25 +159,26 @@ li::first-letter {
   position: relative;
   box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.15);
   text-align: start;
+  border-radius: 5px;
   width: 92%;
   max-width: 420px;
   z-index: 1;
   overflow: hidden;
 }
 
-/* .modal-content::before {
+.modal-content::before {
   content: '';
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  background-image: radial-gradient(circle, rgba(255, 255, 255, 0.2) 20%, rgba(255, 255, 255, 0) 60%);
+  background-image: radial-gradient(circle, rgba(255, 255, 255, 0.095) 20%, rgba(255, 255, 255, 0) 60%);
   background-size: 5px 5px;
   background-position: center;
   z-index: 0;
   pointer-events: none;
-} */
+}
 
 .modal-content::after {
   content: '';
@@ -185,11 +187,11 @@ li::first-letter {
   left: 0;
   width: 100%;
   height: 100%;
-  background-image: url('/foggy.png');
+  background-image: url('/foggy-contrast.jpg');
   background-position: center;
   z-index: 0;
   pointer-events: none;
-  opacity: 50%;
+  opacity: 40%;
 }
 
 
@@ -237,12 +239,12 @@ li::first-letter {
   position: relative;
   width: 90%;
   margin: 0 auto;
-  background: transparent;
-  border: 3px solid lightgray;
   display: flex;
   justify-content: center;
   align-items: center;
   padding: 0px 0px 5px 0px;
+  border: 5px ridge rgb(226, 226, 226);
+  background-blend-mode: screen;
   box-shadow: inset 0 4px 10px rgba(0, 0, 0, 0.3);
 }
 
@@ -330,18 +332,44 @@ li::first-letter {
   justify-content: space-between;
   align-items: center;
   padding: 8px 0px;
-  border-bottom: 1px solid rgba(255, 255, 255, 0.2);
+}
+
+.modal-move-left-content {
+  display: flex;
+  padding-right: 3rem;
 }
 
 .modal-move-type {
   width: 30px;
   height: 30px;
   border-radius: 100%;
+  position: relative;
+  /* box-shadow: inset -2px -2px 4px rgba(255, 255, 255, 0.5),
+              inset 2px 2px 4px rgba(0, 0, 0, 0.3); */
+  box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.15);
+}
+
+.modal-move-type::before {
+  content: "";
+  position: absolute;
+  top: 3px;
+  left: 3px;
+  width: 60%;
+  height: 60%;
+  border-radius: 50%;
+  background: radial-gradient(circle at top left, rgba(255,255,255,0.6), transparent 70%);
+  pointer-events: none;
+}
+
+.modal-move-right-content {
+  display: flex;
+  flex-grow: 1;
+  flex-shrink: 0;
 }
 
 .modal-move-name {
   flex-grow: 1;
-  text-align: center;
+  text-align: left;
 }
 
 .modal-move-power {
@@ -351,24 +379,24 @@ li::first-letter {
 }
 
 
-.modal-move-type.normal { background-color: var(--normal-color); border: solid 2px var(--pokemon-black); }
-.modal-move-type.fire { background-color: var(--fire-color); border: solid 2px var(--pokemon-black); }
-.modal-move-type.water { background-color: var(--water-color); border: solid 2px var(--pokemon-black); }
-.modal-move-type.electric { background-color: var(--electric-color); border: solid 2px var(--pokemon-black); }
-.modal-move-type.grass { background-color: var(--grass-color); border: solid 2px var(--pokemon-black); }
-.modal-move-type.ice { background-color: var(--ice-color); border: solid 2px var(--pokemon-black); }
-.modal-move-type.fighting { background-color: var(--fighting-color); border: solid 2px var(--pokemon-black); }
-.modal-move-type.poison { background-color: var(--poison-color); border: solid 2px var(--pokemon-black); }
-.modal-move-type.ground { background-color: var(--ground-color); border: solid 2px var(--pokemon-black); }
-.modal-move-type.flying { background-color: var(--flying-color); border: solid 2px var(--pokemon-black); }
-.modal-move-type.psychic { background-color: var(--psychic-color); border: solid 2px var(--pokemon-black); }
-.modal-move-type.bug { background-color: var(--bug-color); border: solid 2px var(--pokemon-black); }
-.modal-move-type.rock { background-color: var(--rock-color); border: solid 2px var(--pokemon-black); }
-.modal-move-type.ghost { background-color: var(--ghost-color); border: solid 2px var(--pokemon-black); }
-.modal-move-type.dragon { background-color: var(--dragon-color); border: solid 2px var(--pokemon-black); }
-.modal-move-type.dark { background-color: var(--dark-color); border: solid 2px var(--pokemon-black); }
-.modal-move-type.steel { background-color: var(--steel-color); border: solid 2px var(--pokemon-black); }
-.modal-move-type.fairy { background-color: var(--fairy-color); border: solid 2px var(--pokemon-black); }
+.modal-move-type.normal { background-color: var(--normal-color); border: solid 1px var(--pokemon-black); }
+.modal-move-type.fire { background-color: var(--fire-color); border: solid 1px var(--pokemon-black); }
+.modal-move-type.water { background-color: var(--water-color); border: solid 1px var(--pokemon-black); }
+.modal-move-type.electric { background-color: var(--electric-color); border: solid 1px var(--pokemon-black); }
+.modal-move-type.grass { background-color: var(--grass-color); border: solid 1px var(--pokemon-black); }
+.modal-move-type.ice { background-color: var(--ice-color); border: solid 1px var(--pokemon-black); }
+.modal-move-type.fighting { background-color: var(--fighting-color); border: solid 1px var(--pokemon-black); }
+.modal-move-type.poison { background-color: var(--poison-color); border: solid 1px var(--pokemon-black); }
+.modal-move-type.ground { background-color: var(--ground-color); border: solid 1px var(--pokemon-black); }
+.modal-move-type.flying { background-color: var(--flying-color); border: solid 1px var(--pokemon-black); }
+.modal-move-type.psychic { background-color: var(--psychic-color); border: solid 1px var(--pokemon-black); }
+.modal-move-type.bug { background-color: var(--bug-color); border: solid 1px var(--pokemon-black); }
+.modal-move-type.rock { background-color: var(--rock-color); border: solid 1px var(--pokemon-black); }
+.modal-move-type.ghost { background-color: var(--ghost-color); border: solid 1px var(--pokemon-black); }
+.modal-move-type.dragon { background-color: var(--dragon-color); border: solid 1px var(--pokemon-black); }
+.modal-move-type.dark { background-color: var(--dark-color); border: solid 1px var(--pokemon-black); }
+.modal-move-type.steel { background-color: var(--steel-color); border: solid 1px var(--pokemon-black); }
+.modal-move-type.fairy { background-color: var(--fairy-color); border: solid 1px var(--pokemon-black); }
 
 
 .close-btn {
